# mnk-games

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
src/: board.rs  games.rs  lib.rs  main.rs  mnk.rs  variants.rs
